Archive2/5f/70757a2336400c/output
main.cpp:9:1: error: expected ';' after struct definition
 }
 ^
main.cpp: In member function 'int asdf::peek()':
main.cpp:2:18: error: only constructors take member initializers
     int peek() : peek(0) {
                  ^
main.cpp:2:18: error: class 'asdf' does not have any field named 'peek'
1
